// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar snapshots > angular css mode snapshot (monolithic) 1`] = `
"import { Component, Input } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'app-avatar',
  standalone: true,
  imports: [CommonModule],
  templateUrl: './avatar.component.html',
  styleUrls: ['./avatar.component.css'],
})
export class AvatarComponent {
  @Input() src = '';
  @Input() alt = '';
  @Input() fallback = '';
  @Input() variant: 'circle' | 'square' = 'circle';
  @Input() size: 'xs' | 'sm' | 'md' | 'lg' = 'md';

  errored = false;

  get showImage(): boolean {
    return !!this.src && !this.errored;
  }

  get initials(): string {
    return (this.fallback || this.alt || '').trim().slice(0, 2).toUpperCase();
  }

  onError(): void {
    this.errored = true;
  }
}
"
`;

exports[`Avatar snapshots > angular css mode snapshot (monolithic) 2`] = `
"<div
  [class]="'avatar avatar--' + variant + ' avatar--' + size"
  role="img"
  [attr.aria-label]="alt || fallback || null"
>
  @if (showImage) {
    <img class="avatar-image" [src]="src" [alt]="alt" (error)="onError()" />
  } @else {
    <span class="avatar-fallback" aria-hidden="true">{{ initials }}</span>
  }
</div>
"
`;

exports[`Avatar snapshots > react css mode snapshot 1`] = `
"import React, { useState } from 'react';
import styles from './Avatar.module.css';
export type AvatarVariant = 'circle' | 'square';
export type AvatarSize    = 'xs' | 'sm' | 'md' | 'lg';

export interface AvatarProps extends React.HTMLAttributes<HTMLDivElement> {
  /** Image source; falls back to initials when missing or failed to load */
  src?: string;
  /** Accessible label and image alt text */
  alt?: string;
  /** Explicit fallback text (defaults to initials derived from alt) */
  fallback?: string;
  /** Shape of the avatar */
  variant?: AvatarVariant;
  /** Size of the avatar */
  size?: AvatarSize;
}

export const Avatar = React.forwardRef<HTMLDivElement, AvatarProps>(
  ({ src, alt = '', fallback, variant = 'circle', size = 'md', className, ...props }, ref) => {
    const [errored, setErrored] = useState(false);
    const showImage = Boolean(src) && !errored;
    const initials = (fallback ?? alt ?? '').trim().slice(0, 2).toUpperCase();

    const cls = [
      styles.avatar,
      styles[\`avatar--\${variant}\`],
      styles[\`avatar--\${size}\`],
      className,
    ].filter(Boolean).join(' ');

    return (
      <div ref={ref} className={cls} role="img" aria-label={alt || fallback || undefined} {...props}>
        {showImage ? (
          <img
            className={styles['avatar-image']}
            src={src}
            alt={alt}
            onError={() => setErrored(true)}
          />
        ) : (
          <span className={styles['avatar-fallback']} aria-hidden="true">{initials}</span>
        )}
      </div>
    );
  }
);

Avatar.displayName = 'Avatar';
"
`;

exports[`Avatar snapshots > react css mode snapshot 2`] = `
".avatar {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  overflow: hidden;
  background-color: var(--avatar-fallback-bg, var(--color-secondary));
  color: var(--avatar-fallback-color, var(--color-text));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-weight: var(--avatar-font-weight, 600);
  line-height: 1;
  user-select: none;
}

/* Shapes */
.avatar--circle {
  border-radius: 9999px;
}

.avatar--square {
  border-radius: var(--avatar-radius, var(--radius-md));
}

/* Sizes */
.avatar--xs {
  width: 24px;
  height: 24px;
  font-size: 0.625rem;
}

.avatar--sm {
  width: 32px;
  height: 32px;
  font-size: 0.75rem;
}

.avatar--md {
  width: 40px;
  height: 40px;
  font-size: 0.875rem;
}

.avatar--lg {
  width: 56px;
  height: 56px;
  font-size: 1.125rem;
}

.avatar-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.avatar-fallback {
  line-height: 1;
}
"
`;

exports[`Avatar snapshots > react css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Avatar } from './Avatar';

const meta: Meta<typeof Avatar> = {
  title: 'Crucible/Avatar',
  component: Avatar,
  tags: ['autodocs'],
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['circle', 'square'] },
    size:     { control: 'select', options: ['xs', 'sm', 'md', 'lg'] },
    src:      { control: 'text' },
    alt:      { control: 'text' },
    fallback: { control: 'text' },
  },
};
export default meta;
type Story = StoryObj<typeof Avatar>;

export const Default: Story = {
  args: { variant: 'circle', size: 'md', src: 'https://i.pravatar.cc/100', alt: 'Jane Doe' },
  render: (args) => <Avatar {...args} />,
};

export const Fallback: Story = {
  args: { variant: 'circle', size: 'md', fallback: 'JD', alt: 'Jane Doe' },
  render: (args) => <Avatar {...args} />,
};

export const Square: Story = {
  args: { variant: 'square', size: 'md', fallback: 'AB' },
  render: (args) => <Avatar {...args} />,
};

export const SizeXs: Story = {
  args: { size: 'xs', fallback: 'JD' },
  render: (args) => <Avatar {...args} />,
};
export const SizeSm: Story = {
  args: { size: 'sm', fallback: 'JD' },
  render: (args) => <Avatar {...args} />,
};
export const SizeMd: Story = {
  args: { size: 'md', fallback: 'JD' },
  render: (args) => <Avatar {...args} />,
};
export const SizeLg: Story = {
  args: { size: 'lg', fallback: 'JD' },
  render: (args) => <Avatar {...args} />,
};
"
`;

exports[`Avatar snapshots > react scss mode snapshot 1`] = `
".avatar {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  overflow: hidden;
  background-color: var(--avatar-fallback-bg, var(--color-secondary));
  color: var(--avatar-fallback-color, var(--color-text));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-weight: var(--avatar-font-weight, 600);
  line-height: 1;
  user-select: none;

  &--circle {
    border-radius: 9999px;
  }

  &--square {
    border-radius: var(--avatar-radius, var(--radius-md));
  }

  &--xs {
    width: 24px;
    height: 24px;
    font-size: 0.625rem;
  }

  &--sm {
    width: 32px;
    height: 32px;
    font-size: 0.75rem;
  }

  &--md {
    width: 40px;
    height: 40px;
    font-size: 0.875rem;
  }

  &--lg {
    width: 56px;
    height: 56px;
    font-size: 1.125rem;
  }
}

.avatar-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.avatar-fallback {
  line-height: 1;
}
"
`;

exports[`Avatar snapshots > react scss mode snapshot 2`] = `
".avatar {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  overflow: hidden;
  background-color: var(--avatar-fallback-bg, var(--color-secondary));
  color: var(--avatar-fallback-color, var(--color-text));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-weight: var(--avatar-font-weight, 600);
  line-height: 1;
  user-select: none;

  &--circle {
    border-radius: 9999px;
  }

  &--square {
    border-radius: var(--avatar-radius, var(--radius-md));
  }

  &--xs {
    width: 24px;
    height: 24px;
    font-size: 0.625rem;
  }

  &--sm {
    width: 32px;
    height: 32px;
    font-size: 0.75rem;
  }

  &--md {
    width: 40px;
    height: 40px;
    font-size: 0.875rem;
  }

  &--lg {
    width: 56px;
    height: 56px;
    font-size: 1.125rem;
  }
}

.avatar-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.avatar-fallback {
  line-height: 1;
}
"
`;

exports[`Avatar snapshots > react tailwind mode snapshot 1`] = `
"import React, { useState } from 'react';

export type AvatarVariant = 'circle' | 'square';
export type AvatarSize    = 'xs' | 'sm' | 'md' | 'lg';

export interface AvatarProps extends React.HTMLAttributes<HTMLDivElement> {
  /** Image source; falls back to initials when missing or failed to load */
  src?: string;
  /** Accessible label and image alt text */
  alt?: string;
  /** Explicit fallback text (defaults to initials derived from alt) */
  fallback?: string;
  /** Shape of the avatar */
  variant?: AvatarVariant;
  /** Size of the avatar */
  size?: AvatarSize;
}

const SHAPE_CLASSES: Record<AvatarVariant, string> = {
  circle: 'rounded-full',
  square: 'rounded-[var(--avatar-radius,var(--radius-md))]',
};

const SIZE_CLASSES: Record<AvatarSize, string> = {
  xs: 'w-6 h-6 text-[0.625rem]',
  sm: 'w-8 h-8 text-xs',
  md: 'w-10 h-10 text-sm',
  lg: 'w-14 h-14 text-lg',
};

export const Avatar = React.forwardRef<HTMLDivElement, AvatarProps>(
  ({ src, alt = '', fallback, variant = 'circle', size = 'md', className, ...props }, ref) => {
    const [errored, setErrored] = useState(false);
    const showImage = Boolean(src) && !errored;
    const initials = (fallback ?? alt ?? '').trim().slice(0, 2).toUpperCase();

    const cls = [
      'inline-flex items-center justify-center shrink-0 overflow-hidden select-none font-semibold leading-none',
      'bg-[var(--avatar-fallback-bg,var(--color-secondary))] text-[var(--avatar-fallback-color,var(--color-text))]',
      SHAPE_CLASSES[variant],
      SIZE_CLASSES[size],
      className || '',
    ].filter(Boolean).join(' ');

    return (
      <div ref={ref} className={cls} role="img" aria-label={alt || fallback || undefined} {...props}>
        {showImage ? (
          <img
            className="w-full h-full object-cover"
            src={src}
            alt={alt}
            onError={() => setErrored(true)}
          />
        ) : (
          <span aria-hidden="true">{initials}</span>
        )}
      </div>
    );
  }
);

Avatar.displayName = 'Avatar';
"
`;

exports[`Avatar snapshots > vue css mode snapshot 1`] = `
"<script setup lang="ts">
import { ref, computed } from 'vue';

export type AvatarVariant = 'circle' | 'square';
export type AvatarSize    = 'xs' | 'sm' | 'md' | 'lg';

interface Props {
  src?:      string;
  alt?:      string;
  fallback?: string;
  variant?:  AvatarVariant;
  size?:     AvatarSize;
}

const props = withDefaults(defineProps<Props>(), {
  src: '',
  alt: '',
  fallback: '',
  variant: 'circle',
  size: 'md',
});

const errored = ref(false);
const showImage = computed(() => Boolean(props.src) && !errored.value);
const initials = computed(() => (props.fallback || props.alt || '').trim().slice(0, 2).toUpperCase());
</script>

<template>
  <div
    :class="['avatar', \`avatar--\${variant}\`, \`avatar--\${size}\`]"
    role="img"
    :aria-label="alt || fallback || undefined"
  >
    <img
      v-if="showImage"
      class="avatar-image"
      :src="src"
      :alt="alt"
      @error="errored = true"
    />
    <span v-else class="avatar-fallback" aria-hidden="true">{{ initials }}</span>
  </div>
</template>

<style scoped>
/* Generated by Crucible — edit freely, re-generate with --force */

.avatar {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  overflow: hidden;
  background-color: var(--avatar-fallback-bg, var(--color-secondary));
  color: var(--avatar-fallback-color, var(--color-text));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-weight: var(--avatar-font-weight, 600);
  line-height: 1;
  user-select: none;
}

.avatar--circle {
  border-radius: 9999px;
}

.avatar--square {
  border-radius: var(--avatar-radius, var(--radius-md));
}

.avatar--xs {
  width: 24px;
  height: 24px;
  font-size: 0.625rem;
}

.avatar--sm {
  width: 32px;
  height: 32px;
  font-size: 0.75rem;
}

.avatar--md {
  width: 40px;
  height: 40px;
  font-size: 0.875rem;
}

.avatar--lg {
  width: 56px;
  height: 56px;
  font-size: 1.125rem;
}

.avatar-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.avatar-fallback {
  line-height: 1;
}
</style>
"
`;
